AER-2445 refactored out GSON library (#71)
Also let taskmanager-parent extend from aerius root pom.